--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "eslint-config-next": "^15.1.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-next": "^0.0.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "globals": "^15.13.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
     "postcss": "^8",
-    "prettier": "3.4.2",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "typescript-eslint": "^8.18.1"
